Removed the copying of desktop-defaults to desktop-menu to make sure the incomplete desktop-menu is not accidently used as a full doc

--- a/pod/desktop-menu.pod
+++ b/pod/desktop-menu.pod
@@ -7,7 +7,7 @@ desktop-menu - Utility to build window manager menus
 =head1 SYNOPSIS
 
 This program is a utility to automatically build menus for various window 
-managers. 
+managers. blahblah not finished
 
 
 =head1 How to Use
